examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery_value`.
//
//   examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx:23:32
//    |
// 23 |     let value: Int = takes_int(mystery_value)
//    |                                ^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let mystery_value = ...;
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004

fn takes_int(x: Int) -> Int { x }

fn main() -> Unit {
    let value: Int = takes_int(mystery_value)
}
